--- a/lemur.css
+++ b/lemur.css
@@ -1,8 +1,24 @@
 :root {
-  --text-color: rgb(65, 65, 65);
-  --background-color: rgb(255, 255, 250);
-  --accent-color: rgb(255, 255, 245);
   --max-width: 70ch;
+
+  /*
+  Colors borrowed from Solarized.
+  https://ethanschoonover.com/solarized/
+  */
+
+  --text-color: #586e75;
+  --background-color: #fdf6e3;
+  --accent-color: #eee8d5;
+  --link-color: #859900;
+  --visited-link-color: #d33682;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --text-color: #93a1a1;
+    --background-color: #073642;
+    --accent-color: #002b36;
+  }
 }
 
 html {
@@ -14,6 +30,14 @@ html {
   margin: auto;
   line-height: 1.75;
   font-size: 1.25em;
+}
+
+a {
+  color: var(--link-color);
+}
+
+a:visited {
+  color: var(--visited-link-color)
 }
 
 nav {
